--- a/src/app/pages/home/document-inventory/document-inventory.page.scss
+++ b/src/app/pages/home/document-inventory/document-inventory.page.scss
@@ -1,6 +1,6 @@
 ion-content {
     .main-container {
-        padding: 80px 15px 0 15px;
+        padding: 50px 15px 0 15px;
 
         .Pdf-file {
             // margin-top: 0px;
@@ -18,7 +18,13 @@ ion-content {
     }
 }
 
+ion-card {
+    width: 100%;
+    margin-top: 10px;
+}
+
 ion-textarea{
+    padding: 5px;
     border: solid 1px;
     border-radius: 10px;
 }
