--- a/src/app/pages/tax-calculation/tax-calculation.page.html
+++ b/src/app/pages/tax-calculation/tax-calculation.page.html
@@ -1,12 +1,34 @@
 <ion-header>
-  <ion-toolbar color="primary">
-      <ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
-          <ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
-      </ion-buttons>
-      <ion-title color="light">ការគណនាពន្ធ</ion-title>
-  </ion-toolbar>
+	<ion-toolbar color="primary">
+		<ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
+			<ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
+		</ion-buttons>
+		<ion-title color="light">ការគណនាពន្ធប្រចាំខែ</ion-title>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+	<div class="main-container">
+		<div class="title ion-text-center">
+			<strong>គិតចាប់ពីថ្ងៃទី ០១ ដល់ ៣០ នៃខែ...</strong>
+		</div>
+		<form>
+			<ion-item>
+				<ion-label position="floating">ប្រាក់ចំណូលក្រុមហ៊ុន៖</ion-label>
+				<ion-input type="text"></ion-input>
+			</ion-item>
+			<ion-item>
+				<ion-label position="floating">ចំណាយដែលមានវិក័យបត្រអាករសរុប៖</ion-label>
+				<ion-input type="text"></ion-input>
+			</ion-item>
+			<ion-item>
+				<ion-label position="floating">ចំណាយលើជួលអចលទ្រព្យ និងអចលទ្រព្យ៖</ion-label>
+				<ion-input type="text"></ion-input>
+			</ion-item>
+			<ion-item>
+				<ion-label position="floating">ចំណាយលើសេវាកម្មនៃបុគ្គលមិនមែនក្រុមហ៊ុន៖</ion-label>
+				<ion-input type="text"></ion-input>
+			</ion-item>
+		</form>
+	</div>
 </ion-content>
