--- a/src/global.scss
+++ b/src/global.scss
@@ -25,20 +25,6 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-
-// ion-popover {
-//     ion-backdrop {
-//         opacity: 0.2 !important;
-//     }
-
-//     .popover-wrapper {
-//         .popover-content {
-//             width: 80vw;
-//             max-width: 500px;
-//         }
-//     }
-// }
-
 .border-primary {
     border-radius: 10px;
 }
@@ -80,6 +66,14 @@ ion-toolbar{
     --min-height: 50px;
 }
 
-// ion-content {
-//     --ion-background-color: var(--ion-color-body);
-// }
+ion-content {
+    --color: var(--ion-color-secondary);;
+}
+
+ion-card {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    margin: 0;
+    // border-radius: 10 !important;
+}
