--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -49,7 +49,78 @@
         <!-- PDF section  -->
         <div class="Pdf-file">
             <strong>ទាញយកឯកសារជា PDF :</strong>
-            <ion-grid>
+            <div  *ngIf="docs">
+                <ion-card>
+                    <ion-row *ngIf="docs.vat_certificate">
+                        <ion-col size="3">
+                            <ion-icon (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')"
+                                color="primary" 
+                                class="pdf-icon" 
+                                name="document-attach">
+                            </ion-icon>
+                        </ion-col>
+                        <ion-col>
+                            <p>1. វិញ្ញាបនប័ត្រចុះបញ្ជីពន្ធដារ</p>
+                        </ion-col>
+                        <ion-col size="2">
+                            <ion-icon
+                                (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')"
+                                color="primary"
+                                size="large"
+                                name="download"
+                                mode="md">
+                            </ion-icon>
+                        </ion-col>
+                    </ion-row>
+                </ion-card>
+                <ion-card>
+                    <ion-row *ngIf="docs.patent">
+                        <ion-col size="3">
+                            <ion-icon (click)="dowloadPDF(docs.patent, 'patent')"
+                                color="primary" 
+                                class="pdf-icon" 
+                                name="document-attach">
+                            </ion-icon>
+                        </ion-col>
+                        <ion-col>
+                            <p>2. ប័ណ្ណប៉ាតង់</p>
+                        </ion-col>
+                        <ion-col size="2">
+                            <ion-icon
+                                (click)="dowloadPDF(docs.patent, 'patent')"
+                                color="primary"
+                                size="large"
+                                name="download"
+                                mode="md">
+                            </ion-icon>
+                        </ion-col>
+                    </ion-row>
+                </ion-card>
+                <ion-card>
+                    <ion-row *ngIf="docs.gdt_card">
+                        <ion-col size="3">
+                            <ion-icon (click)="dowloadPDF(docs.gdt_card, 'gdt_card')"
+                                color="primary" 
+                                class="pdf-icon" 
+                                name="document-attach">
+                            </ion-icon>
+                        </ion-col>
+                        <ion-col>
+                            <p>3. កាតពន្ធដារ</p>
+                        </ion-col>
+                        <ion-col size="2">
+                            <ion-icon
+                                (click)="dowloadPDF(docs.gdt_card, 'gdt_card')"
+                                color="primary"
+                                size="large"
+                                name="download"
+                                mode="md">
+                            </ion-icon>
+                        </ion-col>
+                    </ion-row>
+                </ion-card>
+            </div>
+            <!-- <ion-grid>
                 <ion-row *ngIf="!isDocsFetching" class="ion-margin-top">
                     <ion-col size="6">
                         <div *ngIf="docs && docs.vat_certificate">
@@ -70,16 +141,6 @@
                                 class="pdf-icon"
                                 name="document-attach">
                             </ion-icon>
-                            <!-- <pdf-viewer
-                                [src]="docs.patent"
-                                [fit-to-page]="false"
-                                [show-all]="false"
-                                [original-size]="false"
-                                [autoresize]="false"
-                                [show-borders]="true"
-                                (click)="dowloadPDF(docs.patent, 'patent')"
-                                style="display: block;">
-                            </pdf-viewer> -->
                         </div>
                     </ion-col>
                     
@@ -94,7 +155,18 @@
                         </div>
                     </ion-col>
                 </ion-row>
-            </ion-grid>
+            </ion-grid> -->
         </div>
     </div>
 </ion-content>
+
+<!-- <pdf-viewer
+    [src]="docs.patent"
+    [fit-to-page]="false"
+    [show-all]="false"
+    [original-size]="false"
+    [autoresize]="false"
+    [show-borders]="true"
+    (click)="dowloadPDF(docs.patent, 'patent')"
+    style="display: block;">
+</pdf-viewer> -->
