--- a/src/app/pages/general/tax-tap/tax-tap.page.scss
+++ b/src/app/pages/general/tax-tap/tax-tap.page.scss
@@ -30,3 +30,9 @@ pdf-viewer {
 ::ng-deep .pdfViewer .page .textLayer {
     border: 1px solid;
 }
+
+
+ion-card {
+    width: 100%;
+    margin-top: 10px;
+}
