--- a/src/app/pages/home/document-inventory/document-inventory.page.html
+++ b/src/app/pages/home/document-inventory/document-inventory.page.html
@@ -38,7 +38,7 @@
 						</ion-col>
 						<ion-col size="2">
 							<ion-icon
-								(click)="dowloadPDF(doc.docUrl, doc.title)"
+								(click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
 								color="primary"
 								size="large"
 								name="download"
