--- a/src/app/pages/general/moc/moc.page.scss
+++ b/src/app/pages/general/moc/moc.page.scss
@@ -31,7 +31,7 @@ pdf-viewer {
     border: 1px solid;
 }
 
-ion-card {
-    width: 100%;
-    margin-top: 10px;
-}
+// ion-card {
+//     width: 100%;
+//     margin-top: 10px;
+// }
