--- a/src/app/pages/home/document-inventory/document-inventory.page.scss
+++ b/src/app/pages/home/document-inventory/document-inventory.page.scss
@@ -18,10 +18,10 @@ ion-content {
     }
 }
 
-ion-card {
-    width: 100%;
-    margin-top: 10px;
-}
+// ion-card {
+//     width: 100%;
+//     margin-top: 10px;
+// }
 
 ion-textarea{
     padding: 5px;
