--- a/src/global.scss
+++ b/src/global.scss
@@ -71,9 +71,14 @@ ion-content {
 }
 
 ion-card {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    margin: 0;
-    // border-radius: 10 !important;
+
+    .doc-card {
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+        margin: 0;
+        // border-radius: 10 !important;
+        width: 100%;
+        margin-top: 10px;
+    }
 }
