--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -24,7 +24,7 @@
             <ion-toolbar class="text-center">
                 <ion-button (click)="logout()" color="secondary">
                     <ion-icon name="log-out-outline"></ion-icon>
-                    <ion-label color="light">Logout</ion-label>
+                    <ion-label color="light">ចាកចេញ</ion-label>
                 </ion-button>
             </ion-toolbar>
         </ion-footer>
@@ -36,7 +36,7 @@
                     <ion-menu-button color="light" autoHide="false"></ion-menu-button>
                 </ion-buttons>
                 <ion-title color="light">
-                    Home
+                    KG-ALL
                 </ion-title>
                 <ion-buttons class="phone-icon" slot="end" (click)="contactUs()">
                     <ion-icon color="light" name="call"></ion-icon>
@@ -54,7 +54,7 @@
                                     <div>
                                         <ion-icon color="light" name="briefcase"></ion-icon>
                                     </div>
-                                    <ion-label class="text-bold" color="light">General</ion-label>
+                                    <ion-label class="text-bold" color="light">ពត៌មានទូទៅ</ion-label>
                                 </div>
                             </div>
                         </ion-col>
@@ -64,7 +64,7 @@
                                     <div>
                                         <ion-icon color="light" name="list"></ion-icon>
                                     </div>
-                                    <ion-label class="text-bold" color="light">Obligation</ion-label>
+                                    <ion-label class="text-bold" color="light">ស្ថានភាពក្រុមហ៊ុន</ion-label>
                                 </div>
                             </div>
                         </ion-col>
@@ -76,7 +76,7 @@
                                     <div>
                                         <ion-icon color="light" name="calculator"></ion-icon>
                                     </div>
-                                    <ion-label class="text-bold" color="light">Tax Calculation</ion-label>
+                                    <ion-label class="text-bold" color="light">ការគណនាពន្ធ</ion-label>
                                 </div>
                             </div>
                         </ion-col>
@@ -86,7 +86,7 @@
                                     <div>
                                         <ion-icon color="light" name="card"></ion-icon>
                                     </div>
-                                    <ion-label class="text-bold" color="light">Service</ion-label>
+                                    <ion-label class="text-bold" color="light">សេវាកម្ម</ion-label>
                                 </div>
                             </div>
                         </ion-col>
