--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -9,7 +9,7 @@
 
 <ion-content *ngIf="!isFetching">
     <div class="main-container">
-        <ion-grid class="ion-no-padding">
+        <ion-grid *ngIf="moc" class="ion-no-padding">
             <ion-row>
                     <strong>ចុះបញ្ជីពាណិជ្ជកម្មលេខ :</strong>
                     <p class="ion-margin-start">{{ moc.mocNumber }}</p>
@@ -37,6 +37,36 @@
             <ion-row>
                     <strong>លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
                     <p class="ion-margin-start">{{ moc.mocPasswordLogin }}</p>
+            </ion-row>
+        </ion-grid>
+        <ion-grid *ngIf="!moc" class="ion-no-padding">
+            <ion-row>
+                    <strong>ចុះបញ្ជីពាណិជ្ជកម្មលេខ :</strong>
+                    <p class="ion-margin-start">?</p>
+            </ion-row>
+            <ion-row>
+                    <strong>ចុះថ្ងៃទី :</strong>
+                    <p class="ion-margin-start">?</p>
+            </ion-row>
+            <ion-row>
+                    <strong>ដើមទុនចុះបញ្ជី :</strong>
+                    <p class="ion-margin-start">?</p>
+            </ion-row>
+            <ion-row>
+                    <strong>ប្រភេទ :</strong>
+                    <p class="ion-margin-start">?</p>
+            </ion-row>
+            <ion-row>
+                    <strong>ថ្ងៃខែតម្កល់ប្រតិវេទប្រចាំឆ្នាំ :</strong>
+                    <p class="ion-margin-start">?</p>
+            </ion-row>
+            <ion-row>
+                    <strong>ឈ្មោះប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
+                    <p class="ion-margin-start">?</p>
+            </ion-row>
+            <ion-row>
+                    <strong>លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
+                    <p class="ion-margin-start">?</p>
             </ion-row>
         </ion-grid>
         <!-- PDF section  -->
