--- a/src/app/pages/obligation/obligation.page.html
+++ b/src/app/pages/obligation/obligation.page.html
@@ -3,10 +3,71 @@
         <ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
             <ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
         </ion-buttons>
-        <ion-title color="light">Obligation</ion-title>
+        <ion-title color="light">ស្ថានភាពក្រុមហ៊ុន</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+    <div class="main-container ion-padding-top">
+        <strong class="ion-margin-start">1. ពន្ធប្រចាំខែក្នុងឆ្នាំ {{ currentDate | date: 'yyyy'}}</strong>
+        <ion-row>
+            <ion-col size="2" class="ion-text-center">
+                <div class="ion-margin-top" >
+                    <h6 class="table_header">ខែ</h6>
+                </div>
+                <div class="ion-margin-top" *ngFor="let month of arrayMonths">
+                    <h6>{{ month }}</h6>
+                </div>
+            </ion-col>
+            <ion-col size="10">
+                        <ion-slides mode="ios" scrollbar="ios">
+                            <ion-slide>
+                                <ion-row class="w-100-p">
+                                    <ion-col class="ion-no-padding" size="6">
+                                        <div class="ion-margin-top" >
+                                            <h6 class="table_header">ចំណាយ (រៀល)</h6>
+                                        </div>
+                                    </ion-col>
+                                    <ion-col class="ion-no-padding" size="6">
+                                        <div class="ion-margin-top" >
+                                            <h6 class="table_header">ចំណូល (រៀល)</h6>
+                                        </div>
+                                    </ion-col>
+                                </ion-row>
+                            </ion-slide>
+                            <ion-slide>
+                                <ion-row class="w-100-p">
+                                    <ion-col class="ion-no-padding" size="6">
+                                        <div class="ion-margin-top" >
+                                            <h6 class="table_header">ប្រាក់ពន្ធបានបង់ (រៀល)</h6>
+                                        </div>
+                                    </ion-col>
+                                    <ion-col class="ion-no-padding" size="6">
+                                        <div class="ion-margin-top" >
+                                            <h6 class="table_header">ផ្សេងៗ</h6>
+                                        </div>
+                                    </ion-col>
+                                </ion-row>
+                            </ion-slide>
+                            <!-- <ion-slide>
+                                <div class="ion-margin-top" >
+                                    <h6 class="table_header">ប្រាក់ពន្ធបានបង់(រៀល)</h6>
+                                </div>
+                            </ion-slide>
+                            <ion-slide>
+                                <div class="ion-margin-top" >
+                                    <h6 class="table_header">ផ្សេងៗ</h6>
+                                </div>
+                            </ion-slide> -->
+                        </ion-slides>
+            </ion-col>
+        </ion-row>
+            <!-- <ion-grid>
+                <ion-row nowrap class="forecast_container">
+                    <ion-col size="6">Hehe</ion-col>
+                    <ion-col size="6">haha</ion-col>
+                    <ion-col size="6">ouii</ion-col>
+                </ion-row>
+            </ion-grid> -->
+    </div>
 </ion-content>
