--- a/src/app/pages/obligation/obligation.page.html
+++ b/src/app/pages/obligation/obligation.page.html
@@ -11,63 +11,58 @@
     <div class="main-container ion-padding-top">
         <strong class="ion-margin-start">1. ពន្ធប្រចាំខែក្នុងឆ្នាំ {{ currentDate | date: 'yyyy'}}</strong>
         <ion-row>
-            <ion-col size="2" class="ion-text-center">
-                <div class="ion-margin-top" >
+            <ion-col class="ion-no-padding ion-text-center" size="2">
+                <div class="ion-margin-top border-bottom">
                     <h6 class="table_header">ខែ</h6>
                 </div>
-                <div class="ion-margin-top" *ngFor="let month of arrayMonths">
+                <div class="ion-margin-top border-bottom" *ngFor="let month of arrayMonths">
                     <h6>{{ month }}</h6>
                 </div>
             </ion-col>
-            <ion-col size="10">
-                        <ion-slides mode="ios" scrollbar="ios">
+            <ion-col class="ion-no-padding" size="10">
+                        <ion-slides mode="md" scrollbar="md">
                             <ion-slide>
                                 <ion-row class="w-100-p">
-                                    <ion-col class="ion-no-padding" size="6">
-                                        <div class="ion-margin-top" >
+                                    <ion-col class="ion-no-padding ion-text-start" size="6">
+                                        <div class="ion-margin-top ion-padding-start border-bottom">
                                             <h6 class="table_header">ចំណាយ (រៀល)</h6>
                                         </div>
+                                        <div class="ion-margin-top ion-padding-start border-bottom" *ngFor="let month of arrayMonths">
+                                            <h6>...</h6>
+                                        </div>
                                     </ion-col>
-                                    <ion-col class="ion-no-padding" size="6">
-                                        <div class="ion-margin-top" >
+                                    <ion-col class="ion-no-padding ion-text-start" size="6">
+                                        <div class="ion-margin-top ion-padding-start border-bottom">
                                             <h6 class="table_header">ចំណូល (រៀល)</h6>
+                                        </div>
+                                        <div class="ion-margin-top ion-padding-start border-bottom" *ngFor="let month of arrayMonths">
+                                            <h6>...</h6>
                                         </div>
                                     </ion-col>
                                 </ion-row>
                             </ion-slide>
                             <ion-slide>
                                 <ion-row class="w-100-p">
-                                    <ion-col class="ion-no-padding" size="6">
-                                        <div class="ion-margin-top" >
-                                            <h6 class="table_header">ប្រាក់ពន្ធបានបង់ (រៀល)</h6>
+                                    <ion-col class="ion-no-padding ion-text-start" size="6">
+                                        <div class="ion-margin-top ion-padding-start border-bottom">
+                                            <h6 class="table_header">ប្រាក់ពន្ធបង់រួច(រៀល)</h6>
+                                        </div>
+                                        <div class="ion-margin-top ion-padding-start border-bottom" *ngFor="let month of arrayMonths">
+                                            <h6>..</h6>
                                         </div>
                                     </ion-col>
-                                    <ion-col class="ion-no-padding" size="6">
-                                        <div class="ion-margin-top" >
+                                    <ion-col class="ion-no-padding ion-text-start" size="6">
+                                        <div class="ion-margin-top ion-padding-start border-bottom" >
                                             <h6 class="table_header">ផ្សេងៗ</h6>
+                                        </div>
+                                        <div class="ion-margin-top ion-padding-start border-bottom" *ngFor="let month of arrayMonths">
+                                            <h6>..</h6>
                                         </div>
                                     </ion-col>
                                 </ion-row>
                             </ion-slide>
-                            <!-- <ion-slide>
-                                <div class="ion-margin-top" >
-                                    <h6 class="table_header">ប្រាក់ពន្ធបានបង់(រៀល)</h6>
-                                </div>
-                            </ion-slide>
-                            <ion-slide>
-                                <div class="ion-margin-top" >
-                                    <h6 class="table_header">ផ្សេងៗ</h6>
-                                </div>
-                            </ion-slide> -->
                         </ion-slides>
             </ion-col>
         </ion-row>
-            <!-- <ion-grid>
-                <ion-row nowrap class="forecast_container">
-                    <ion-col size="6">Hehe</ion-col>
-                    <ion-col size="6">haha</ion-col>
-                    <ion-col size="6">ouii</ion-col>
-                </ion-row>
-            </ion-grid> -->
     </div>
 </ion-content>
