--- a/src/app/pages/obligation/obligation.page.scss
+++ b/src/app/pages/obligation/obligation.page.scss
@@ -6,6 +6,14 @@ ion-content {
             color: var(--ion-color-primary);
         }
 
+        // ion-slide {
+        //     ion-col {
+        //         div {
+        //             border-bottom: 1px solid #000000;
+        //         }
+        //     }
+        // }
+
         .forecast_container {
             overflow-x: scroll!important;
             overflow-y: hidden;
