hehe more tt hz

--- a/src/app/pages/obligation/obligation.page.html
+++ b/src/app/pages/obligation/obligation.page.html
@@ -20,7 +20,7 @@
                 </div>
             </ion-col>
             <ion-col class="ion-no-padding" size="10">
-                        <ion-slides mode="md" scrollbar="md">
+                        <ion-slides mode="md" scrollbar="true">
                             <ion-slide>
                                 <ion-row class="w-100-p">
                                     <ion-col class="ion-no-padding ion-text-start" size="6">
