--- a/src/app/pages/obligation/obligation.page.html
+++ b/src/app/pages/obligation/obligation.page.html
@@ -4,7 +4,7 @@
   
       <ion-tab-button tab="tax-per-months">
         <!-- <ion-icon name="home"></ion-icon> -->
-        <ion-icon size="large" name="business"></ion-icon>
+        <ion-icon size="large" name="list"></ion-icon>
         <ion-label class="text-bold ion-no-margin">ពន្ធប្រចាំខែ</ion-label>
       </ion-tab-button>
   
