--- a/src/app/pages/obligation/obligation.page.html
+++ b/src/app/pages/obligation/obligation.page.html
@@ -8,7 +8,7 @@
         <ion-label class="text-bold ion-no-margin">ពន្ធប្រចាំខែ</ion-label>
       </ion-tab-button>
   
-      <ion-tab-button tab="">
+      <ion-tab-button tab="tax-per-years">
         <ion-icon size="large" name="newspaper"></ion-icon>
         <ion-label class="text-bold ion-no-margin">ពន្ធប្រចាំឆ្នាំ</ion-label>
       </ion-tab-button>
