--- a/src/app/pages/obligation/tax-per-months/tax-per-months.page.html
+++ b/src/app/pages/obligation/tax-per-months/tax-per-months.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div class="main-container ion-padding-top">
-      <strong class="ion-margin-start">1. ពន្ធប្រចាំខែក្នុងឆ្នាំ {{ currentDate | date: 'yyyy'}}</strong>
+      <strong class="ion-margin-start">ពន្ធប្រចាំខែក្នុងឆ្នាំ {{ currentDate | date: 'yyyy'}}</strong>
       <ion-row *ngIf="taxPerMonths.length > 0">
           <ion-col class="ion-no-padding ion-text-center" size="2">
               <div class="ion-margin-top border-bottom">
