hehe more style

--- a/src/app/pages/obligation/tax-per-months/tax-per-months.page.html
+++ b/src/app/pages/obligation/tax-per-months/tax-per-months.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <div class="main-container ion-padding-top">
       <strong class="ion-margin-start">ពន្ធប្រចាំខែក្នុងឆ្នាំ {{ currentDate | date: 'yyyy'}}</strong>
-      <ion-row *ngIf="taxPerMonths.length > 0">
+      <ion-row *ngIf="taxPerMonths.length > 0" class="ion-margin-top">
           <ion-col class="ion-no-padding ion-text-center" size="2">
               <div class="ion-margin-top border-bottom">
                   <h6 class="table_header">ខែ</h6>
