--- a/src/app/pages/obligation/tax-per-months/tax-per-months.page.scss
+++ b/src/app/pages/obligation/tax-per-months/tax-per-months.page.scss
@@ -1,22 +1,9 @@
 ion-content {
     .main-container {
-        // padding: 30px 0 0 15px;
+        padding: 30px 0 0 0;
 
         .table_header{
             color: var(--ion-color-primary);
-        }
-
-        // ion-slide {
-        //     ion-col {
-        //         div {
-        //             border-bottom: 1px solid #000000;
-        //         }
-        //     }
-        // }
-
-        .forecast_container {
-            overflow-x: scroll!important;
-            overflow-y: hidden;
         }
     }
 }
