--- a/src/app/pages/obligation/tax-per-years/tax-per-years.page.html
+++ b/src/app/pages/obligation/tax-per-years/tax-per-years.page.html
@@ -8,5 +8,31 @@
 </ion-header>
 
 <ion-content>
-
+  <div class="main-container ion-padding-top">
+    <strong class="ion-margin-start">ពន្ធប្រចាំឆ្នាំ (5ឆ្នាំចុងក្រោយ)</strong>
+    <ion-row class="table_header ion-margin-top">
+      <ion-col size="4" class="border-bottom text-center">
+        <div>
+          <h6>ឆ្នាំ</h6>
+        </div>
+      </ion-col>
+      <ion-col size="8" class="border-bottom">
+        <div>
+          <h6>ប្រាក់ពន្ធបានបង់ (រៀល)</h6>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngFor="let item of taxPerYears" class="ion-margin-top">
+      <ion-col size="4" class="border-bottom text-center">
+        <div>
+          <h6>{{ item.year }}</h6>
+        </div>
+      </ion-col>
+      <ion-col size="8" class="border-bottom">
+        <div>
+          <h6>{{ item.taxPaidAmount ? (item.taxPaidAmount | number) : '...' }}</h6>
+        </div>
+      </ion-col>
+    </ion-row>
+  </div>
 </ion-content>
