--- a/src/app/pages/obligation/obligation.page.scss
+++ b/src/app/pages/obligation/obligation.page.scss
@@ -1,27 +1,8 @@
-ion-content {
-    .main-container {
-        // padding: 30px 0 0 15px;
-
-        .table_header{
-            color: var(--ion-color-primary);
-        }
-
-        // ion-slide {
-        //     ion-col {
-        //         div {
-        //             border-bottom: 1px solid #000000;
-        //         }
-        //     }
-        // }
-
-        .forecast_container {
-            overflow-x: scroll!important;
-            overflow-y: hidden;
-        }
-    }
-}
-
-
 ion-tab-bar {
     padding-bottom: 5px;
+
+    ion-label {
+        font-size: 12px;
+        padding-bottom: 5px;
+    }
 }
